--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://justinnas.github.io",
+	"homepage": "https://justinnas.github.io/Portfolio-Website/",
 	"name": "portfolio-website",
 	"version": "0.1.0",
 	"private": true,
