--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react": "^18.2.0",
 		"react-animated-cursor": "^2.11.2",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.22.0",
 		"react-scripts": "5.0.1",
 		"react-type-animation": "^3.2.0",
 		"web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"gh-pages": "^6.1.1"
 	}
 }
