--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
 		"react-animated-cursor": "^2.11.2",
+		"react-custom-scrollbars": "^4.2.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.0",
 		"react-scripts": "5.0.1",
+		"react-scrollbars-custom": "^4.1.1",
 		"react-type-animation": "^3.2.0",
 		"web-vitals": "^2.1.4"
 	},
